argocd/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
  - "argocd.cluster.clearavenue.com"
  gateways:
  - istio-system/istio-gateway
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
